[tool.poetry]
name = "my-resume"
version = "0.1.0"
description = "Olivier Philippon's hand-crafted resume 🤓"
authors = ["Olivier Philippon <olivier@dunsap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytailwindcss = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ruff = "^0.1.9"
ipython = "^8.19.0"
watchfiles = "^0.21.0"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["tomllib"]
known-first-party = ["myresume"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
